--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run ssr-playground:serve-ssr",
+    "serve:ssr": "node dist/ssr-playground/server/main.js",
+    "serve:ssr:en": "node dist/server/en/main.js",
+    "serve:ssr:ru": "node dist/server/ru/main.js",
+    "build:ssr": "ng build --prod && ng run ssr-playground:server:production",
+    "prerender": "ng run ssr-playground:prerender",
+    "extract-i18n": "ng extract-i18n --output-path src/i18n --out-file messages.xlf && xliffmerge --profile ./xliffmerge.json"
   },
   "private": true,
   "dependencies": {
@@ -16,9 +23,14 @@
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
+    "@angular/localize": "^11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
+    "@angular/platform-server": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@nguniversal/express-engine": "^11.0.1",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -27,6 +39,9 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@nguniversal/builders": "^11.0.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -37,6 +52,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ngx-i18nsupport": "^0.17.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
