--- a/package.json
+++ b/package.json
@@ -19,18 +19,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.5",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.5",
     "@angular/localize": "^11.0.5",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/platform-server": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@nguniversal/express-engine": "^11.0.1",
+    "@types/highlight.js": "^10.1.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.15.2",
+    "ngx-highlightjs": "^4.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
